@@ -1,3 +1,8 @@
+2012-08-28 Srecko Morovic <srecko.morovic@cern.ch>
+
+	* tag V02-05-20
+	* not restarting slaves until previous one has finished restarting
+
 2012-08-15 Srecko Morovic <srecko.morovic@cern.ch>
 
 	* tag V02-05-19
